--- a/task/class_task/analysis_on_food_consumption.ipynb
+++ b/task/class_task/analysis_on_food_consumption.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "1a127481",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "90ee95bf",
    "metadata": {},
    "outputs": [
@@ -383,9 +383,7 @@
     "t_stat, p_value = stats.ttest_ind(argentina_beef, bangladesh_beef, equal_var=False)\n",
     "\n",
     "print(\"\\nT-statistic:\", t_stat)\n",
-    "print(\"p-value:\", p_value)\n",
-    "if p_value < 0.05:\n",
-    "    print(\"Reject the null hypothesis: There is a significant difference in beef consumption between Argentina and Bangladesh.\")"
+    "print(\"p-value:\", p_value)"
    ]
   },
   {
@@ -398,7 +396,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fail to Reject Null Hypothesis → No significant difference in beef consumption.\n"
+      "Fail to Reject Null Hypothesis → No significant difference in beef consumption.\n",
+      "p-value: nan\n"
      ]
     }
    ],
@@ -407,7 +406,10 @@
     "if p_value < 0.05:\n",
     "    print(\"Reject Null Hypothesis → Beef consumption is significantly different between Argentina and Bangladesh.\")\n",
     "else:\n",
-    "    print(\"Fail to Reject Null Hypothesis → No significant difference in beef consumption.\")\n"
+    "    print(\"Fail to Reject Null Hypothesis → No significant difference in beef consumption.\")\n",
+    "    # Report the p-value\n",
+    "    print(\"p-value:\", p_value)\n",
+    "    \n"
    ]
   }
  ],
