--- a/week_15/working_with_deep_learning_code..ipynb
+++ b/week_15/working_with_deep_learning_code..ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "7c28a6ff",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Dataanddata_analysis (3.13.5)",
    "language": "python",
    "name": "python3"
   },
